--- a/info.plist
+++ b/info.plist
@@ -19,6 +19,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>17C80585-EC4F-498F-AB91-DBA6EBEA4C9D</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>259A5907-9A8C-4B24-A85E-B11FDC01D311</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>E8F85589-F67A-4DC4-A472-E781462F41BF</key>
 		<array>
 			<dict>
@@ -148,6 +161,49 @@
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>escaping</key>
+				<integer>79</integer>
+				<key>keyword</key>
+				<string>juejin</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>0</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string>Searching... Please Wait</string>
+				<key>script</key>
+				<string>/usr/local/bin/node common_search.js 3 "{query}"</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>Input keywords to search in juejin</string>
+				<key>title</key>
+				<string>搜索</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>17C80585-EC4F-498F-AB91-DBA6EBEA4C9D</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
@@ -156,23 +212,30 @@
 		<key>0A1F8331-941F-436E-B246-33278755D60A</key>
 		<dict>
 			<key>xpos</key>
-			<integer>200</integer>
+			<integer>190</integer>
 			<key>ypos</key>
 			<integer>40</integer>
+		</dict>
+		<key>17C80585-EC4F-498F-AB91-DBA6EBEA4C9D</key>
+		<dict>
+			<key>xpos</key>
+			<integer>190</integer>
+			<key>ypos</key>
+			<integer>260</integer>
 		</dict>
 		<key>259A5907-9A8C-4B24-A85E-B11FDC01D311</key>
 		<dict>
 			<key>xpos</key>
-			<integer>450</integer>
+			<integer>400</integer>
 			<key>ypos</key>
-			<integer>170</integer>
+			<integer>150</integer>
 		</dict>
 		<key>E8F85589-F67A-4DC4-A472-E781462F41BF</key>
 		<dict>
 			<key>xpos</key>
-			<integer>200</integer>
+			<integer>190</integer>
 			<key>ypos</key>
-			<integer>170</integer>
+			<integer>150</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
