--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "common_search",
+  "name": "flow",
   "version": "0.1.0",
-  "description": "集成 Github、掘金、知乎、淘宝等智能搜索的一款 alfred workflow 插件。(不依赖第三方模块)",
-  "main": "common_search.js",
+  "description": "work flow enhance",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
