feat: support toggle pac

--- a/info.plist
+++ b/info.plist
@@ -60,6 +60,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>62AC894E-3015-44DC-96BC-313D1622A652</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>4C4E518D-0498-4D93-B09C-549A95C44A7D</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>AC03358E-EAF7-48F0-A86A-951E4AD07CBC</key>
 		<array>
 			<dict>
@@ -78,6 +91,19 @@
 			<dict>
 				<key>destinationuid</key>
 				<string>258D642D-325C-41B4-A42D-465A99642478</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>B7F7DB64-3BFF-45CC-B9C9-F9C92041AB7C</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>62AC894E-3015-44DC-96BC-313D1622A652</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -569,6 +595,127 @@
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>lastpathcomponent</key>
+				<false/>
+				<key>onlyshowifquerypopulated</key>
+				<false/>
+				<key>removeextension</key>
+				<false/>
+				<key>text</key>
+				<string></string>
+				<key>title</key>
+				<string></string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.notification</string>
+			<key>uid</key>
+			<string>4C4E518D-0498-4D93-B09C-549A95C44A7D</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>keyword</key>
+				<string>pac</string>
+				<key>subtext</key>
+				<string>快速切换 pac 配置</string>
+				<key>text</key>
+				<string>pac-toggle</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.keyword</string>
+			<key>uid</key>
+			<string>B7F7DB64-3BFF-45CC-B9C9-F9C92041AB7C</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>127</integer>
+				<key>script</key>
+				<string># set it by yourself
+#快速切换 autoproxy pac 配置。 快速切换 Mac 系统中 System Preferences -&gt; Network -&gt; #Advanced... -&gt; Proxise -&gt; Automatic Proxy Configuration 这一项。
+#pac 1 ： 切换到 pac1
+#pac 2 ： 切换到 pac2
+#pac [空 | others] : 禁用 autoproxy
+#注意：使用前请打开 workflow 设置自己的 pac url
+
+proxy_1="http://127.0.0.1:16823/proxy_on.pac"
+
+DEVICE=$(networksetup -listnetworkserviceorder | awk '
+  BEGIN {
+    "netstat -rn | grep default " | getline var
+    split(var, ARRAY, " ")
+  }
+
+  { if ($5 ~ ARRAY[6]) { NAME=$3 } }
+
+  END { print NAME }
+')
+
+proxy_url=""
+clear_all_pac="clear_all_pac"
+auto_proxy_discovery="auto_proxy_discovery"
+
+case "{query}" in
+  1)
+  proxy_url="$auto_proxy_discovery"
+  ;;
+  2)
+  proxy_url="$proxy_1"
+  ;;
+  # set more pac in here.
+  *)
+  proxy_url="$clear_all_pac"
+  ;;
+esac
+
+if [ -n "$proxy_url" ]; then
+    echo "$proxy_url"
+if [ "$proxy_url" = "$clear_all_pac" ]; then
+  networksetup -setautoproxystate Wi-Fi off
+  networksetup -setproxyautodiscovery Wi-Fi off
+  networksetup -setsocksfirewallproxystate Wi-Fi off
+  # networksetup -setwebproxystate Wi-Fi off
+  echo "disable autoproxy" 
+elif [ "$proxy_url" = "$auto_proxy_discovery" ]; then
+  networksetup -setautoproxystate Wi-Fi off
+  networksetup -setproxyautodiscovery Wi-Fi on
+  networksetup -setsocksfirewallproxystate Wi-Fi off
+  echo "set proxyautodiscovery"
+else
+  networksetup -setautoproxyurl ${DEVICE%,*} ${proxy_url}
+  echo "switch to ${proxy_url}"
+fi
+else
+ echo "please set your pac url."
+fi</string>
+				<key>scriptargtype</key>
+				<integer>0</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>62AC894E-3015-44DC-96BC-313D1622A652</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
@@ -616,6 +763,20 @@
 			<key>ypos</key>
 			<integer>380</integer>
 		</dict>
+		<key>4C4E518D-0498-4D93-B09C-549A95C44A7D</key>
+		<dict>
+			<key>xpos</key>
+			<integer>455</integer>
+			<key>ypos</key>
+			<integer>950</integer>
+		</dict>
+		<key>62AC894E-3015-44DC-96BC-313D1622A652</key>
+		<dict>
+			<key>xpos</key>
+			<integer>265</integer>
+			<key>ypos</key>
+			<integer>950</integer>
+		</dict>
 		<key>80F67126-8A71-4268-95E8-6BC8B87A976C</key>
 		<dict>
 			<key>xpos</key>
@@ -636,6 +797,13 @@
 			<integer>95</integer>
 			<key>ypos</key>
 			<integer>675</integer>
+		</dict>
+		<key>B7F7DB64-3BFF-45CC-B9C9-F9C92041AB7C</key>
+		<dict>
+			<key>xpos</key>
+			<integer>95</integer>
+			<key>ypos</key>
+			<integer>950</integer>
 		</dict>
 		<key>D9E0CF4E-F639-4FEB-8ECB-9B6CA14A7131</key>
 		<dict>
@@ -664,6 +832,6 @@
 	<key>version</key>
 	<string>0.2.0</string>
 	<key>webaddress</key>
-	<string>https://github.com/MuYunyun</string>
+	<string>https://github.com/MuYunyun/flow</string>
 </dict>
 </plist>
